Fixed button sizing and dropdown transitions on mobile

--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -122,7 +122,7 @@ button.link-dropdown p {
 	transition: color 0.5s ease;
 }
 ul.link-dropdown-list {
-	transition: height 0.25s ease, padding 0.25s ease;
+	transition: height 0.25s ease, padding 0.25s ease, margin-top 0.25s ease;
 	height: 8em;
 
 	font-family: neue-haas-grotesk-display, sans-serif;
@@ -140,7 +140,7 @@ ul.link-dropdown-list {
 	padding-top: 0em;
 	padding-bottom: 0em;
 	width: 8em;
-	margin-top: -1em;
+	margin-top: -3em;
 
 	display: flex;
 	align-items: start;
@@ -176,6 +176,7 @@ ul.link-dropdown-list.hide {
 	height: 0;
 	padding-top: 0em;
 	padding-bottom: 0em;
+	margin-top: -6em;
 }
 
 ul.link-dropdown-list.hide li {
@@ -220,6 +221,7 @@ header #right-components {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	overflow-x: hidden;
 }
 
 header #right-components ul.link-dropdown-list {
@@ -270,37 +272,36 @@ footer.invert {
 
 @media screen and (orientation: portrait) {
 	button.link {
-		width: 6.5em;
-		font-size: 3em;
-		border-left-width: 3vw;
+		width: 8em;
+		font-size: 2em;
+		border-left-width: 1em;
 	}
 
 	button.link p {
-		padding-top: .75vh;
-		padding-bottom: .75vh;
-		padding-left: 4vw;
+		padding-top: .75em;
+		padding-bottom: .75em;
+		padding-left: 1em;
 	}
 
 	ul.link-dropdown-list {
-		width: 6.5em;
-		margin-top: -1vh;
-		font-size: 3em;
+		width: 8em;
+		font-size: 2em;
 	}
 
 	button.link-dropdown {
-		width: 6.5em;
-		font-size: 3em;
-		border-left-width: 3vw;
+		width: 8em;
+		font-size: 2em;
+		border-left-width: 1em;
 	}
 
 	ul.link-dropdown-list li {
-		padding-left: 5vw;
+		padding-left: 0.5em;
 	}
 
 	button.link-dropdown p {
-		padding-left: 4vw;
-		padding-top: .75vh;
-		padding-bottom: .75vh;
+		padding-left: 1em;
+		padding-top: .75em;
+		padding-bottom: .75em;
 	}
 
 	footer {
